# ChangeLog for dev-libs/libestr
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libestr/ChangeLog,v 1.25 2013/10/19 12:22:23 hwoarang Exp $

*libestr-0.1.8 (19 Oct 2013)

  19 Oct 2013; Markos Chandras <hwoarang@gentoo.org> +libestr-0.1.8.ebuild:
  Version bump

  27 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libestr-0.1.5.ebuild:
  Stable for x86, wrt bug #472564

  08 Jun 2013; Jeroen Roovers <jer@gentoo.org> libestr-0.1.5.ebuild:
  Stable for HPPA (bug #472564).

  04 Jun 2013; Chema Alonso <nimiux@gentoo.org> libestr-0.1.5.ebuild:
  Stable for amd64 wrt bug #470396

*libestr-0.1.5 (13 Apr 2013)

  13 Apr 2013; Maxim Koltsov <maksbotan@gentoo.org> +libestr-0.1.5.ebuild:
  Bump to 0.1.5.

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libestr-0.1.4.ebuild:
  Stable for x86, wrt bug #441190

  12 Nov 2012; Anthony G. Basile <blueness@gentoo.org> libestr-0.1.4.ebuild:
  stable arm, bug #441190

  06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> libestr-0.1.4.ebuild:
  Stable on amd64 wrt bug #441190

  06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> libestr-0.1.4.ebuild:
  Fix minor QA issues - replace 'find/rm' with prune_libtool_files, replace
  'emake install' with default src_install call

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libestr-0.1.3.ebuild:
  x86 stable wrt bug #433225

*libestr-0.1.4 (17 Sep 2012)

  17 Sep 2012; Markos Chandras <hwoarang@gentoo.org> +libestr-0.1.4.ebuild:
  Version bump

  14 Sep 2012; Agostino Sarubbo <ago@gentoo.org> libestr-0.1.3.ebuild:
  Stable for amd64, wrt bug #433225

  08 Sep 2012; Anthony G. Basile <blueness@gentoo.org> libestr-0.1.3.ebuild:
  Stable arm, bug #433225

  23 Jul 2012; Markus Meier <maekke@gentoo.org> libestr-0.1.3.ebuild:
  add ~arm, bug #425526

  12 Jul 2012; Jeroen Roovers <jer@gentoo.org> libestr-0.1.3.ebuild:
  Marked ~hppa (bug #425526).

*libestr-0.1.3 (11 Jul 2012)
